# LanguageProcessing

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md  a.out  analyzer.c  ast.c  ast.h  casl2_codegen.c  cross_ref.c  crossref.c  cursol.c  cursol.h  hash.c  hash_table.c  ir.c  ir.h  lex.c  lex.h  lexer.c  lexer.h  macro.h  main.c  message.c  message.h  mppl  mppl.h  parse_tree.c  parse_tree.h  parser-dsl.h  parser.c  parser.h  pretty_printer.c  pretty_printer.h  rule_stream.c  rule_stream.h  scan.c  scan.h  scanner-message.c  (+21 more)
.devcontainer/: Dockerfile  devcontainer.json  greeting.fish  setup.bash
example/: brainfuck.mpl
mpl/task1/: sample11p.mpl  sample14.mpl  sample18.mpl
mpl/task2/: sample021.mpl  sample023.mpl  sample026.mpl  sample22.mpl  sample23.mpl  sample24.mpl  sample25.mpl  sample25t.mpl  sample26.mpl  sample27.mpl  sample28p.mpl  sample29p.mpl  sample2a.mpl
mpl/task3/: sample032p.mpl  sample31p.mpl  sample33p.mpl  sample35.mpl
src/: analyzer.c  array.c  array.h  ast.c  ast.h  ast_pretty.c  ast_pretty.h  bit_set.c  bit_set.h  bitset.c  bitset.h  canvas.c  canvas.h  casl2_codegen.c  checker.c  checker.h  codegen_casl2.c  codegen_casl2.h  codegen_llvm.c  compiler.h  context.c  context.h  context_fwd.h  crossref.c  diag.c  diag.h  diagnostics.c  diagnostics.h  hash_map.c  hash_table.c  inference.c  inference.h  ir.c  ir.h  lexer.c  lexer.h  lexical_tree.c  lexical_tree.h  list.c  list.h  (+75 more)
src/mpplc/: lexer.h
task1/: id-list.c  id-list.h  scan-info.c  scan-info.h  scan.c  scan.h  scanner-message.h  scanner.c  scanner.h  str-buf.c  str-buf.h  tc  token-list.c  token-list.h
task1/input_sample/: sample011.mpl  sample014.mpl  sample11.mpl  sample13.mpl  sample14p.mpl  sample15a.mpl  sample16.mpl  sample17.mpl  sample19p.mpl
task1_sample/: sample011.mpl  sample11.mpl  sample11pp.mpl  sample12.mpl  sample14.mpl  sample15.mpl
task2_sample/: sample022.mpl  sample024.mpl  sample025.mpl  sample02a.mpl  sample21.mpl  sample25t.mpl
task3_sample/: sample34.mpl
test/: CMakeLists.txt  test_hashmap.c
